kubernetes/luffy/apps/flux-system/flux-operator/app/flux-web-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: flux-web
spec:
  parentRefs:
    - kind: Gateway
      name: envoy
      namespace: network
  hostnames:
    - flux.${CLUSTER_DOMAIN}
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: flux-operator
          namespace: flux-system
          port: 9080
